<resources>
    <string name="app_name">IFCana</string>

    <!-- Error -->
    <string name="error">Campo obrigatório</string>

    <!--Tela de cadastro-->
    <string name="cadastrar">Cadastrar Equipe</string>
    <string name="nome">Nome da Equipe</string>
    <string name="equipe">Cor da equipe</string>
    <string name="bt">Enviar</string>

    <!--Tela de Opções -->
    <string name="tema">IFCANA</string>
    <string name="btcadastro">Cadastro</string>
    <string name="btacompanhar">Provas e instruções</string>

    <!--Tela de Opções2 -->
    <string name="participante">Área do participante</string>
    <string name="pontuacao">Pontuação</string>

    <!--Tela de provas-->
    <string name="proxprova">Próxima prova</string>
    <string name="temporestante">Tempo restante</string>
    <string name="caboguerra">Cabo de guerra</string>
    <string name="txtwar">Dividir os participantes em duas equipes, sempre buscando equilibrá-las em número, força e idade. Marcar o centro da corda com um lenço e no chão com um giz.
Assim que feita a divisão, puxa-se a corda. A  equipe que conseguir puxar pelo menos um dos adversários para frente da linha centra é a vencedora.</string>
    <string name="txtarremesso">Arremesso de argolas, faz 1 ponto quem conseguir encaixar o bambolê na referÊncial primeiro. Ganha quem tiver mais pontos.</string>
    <string name="txtcesta">Jogam duas equipes e dois ajudantes. A brincadeira funciona como um jogo de basquete, mas só há uma cesta, que na verdade são duas pessoas, de braços dados e abertos. Quem fizer uma cesta, escolhe alguém da dupla para substituí-lo
        na equipe e ele será a nova metade da cesta. A equipe que fizer mais cestas, vence a partida.</string>
    <string name="txtpichorra">Uma bexiga é pendurada no alto e os representantes das equipes, depois de vendados e rodados, devem estourá-la com um pau, sendo
        guiadas pelas respectivas equipes.</string>
    <string name="pichorra">Pichorra</string>
    <string name="arremesso">Arremesso</string>
    <string name="cestinha">Cestinha</string>
    <string name="tempo">Tempo restante</string>

    <!--Tela de pontuação-->
    <string name="txtpontuacao">Pontuação</string>
    <string name="time1">Time Vermelho</string>
    <string name="time2">Time Verde</string>
    <string name="time3">Time Amarelo</string>
    <string name="time4">Time Azul</string>
</resources>