<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:id="@+id/btvoltar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caboguerra"
            android:textColor="#000000"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cabo_de_guerra"
            android:layout_weight="0.13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtwar"
            android:textColor="#000000"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btprova1"
            android:text="@string/proxprova"
            android:background="@drawable/bordabotao"
            android:layout_marginTop="130dp"
            android:layout_gravity="center_horizontal" />



    </LinearLayout>

</ScrollView>
