<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txtpontuacao"
                android:textSize="30dp"
                android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time1"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtime1"
                android:layout_marginLeft="260dp"
                android:textColor="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time2"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtime2"
                android:layout_marginLeft="283dp"
                android:textColor="#000000"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image2993"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tema"
            android:textSize="70dp"/>
    </LinearLayout>

    </LinearLayout>

</ScrollView>
