<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:textSize="30dp"
                android:textColor="#000000"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipe"
                android:textSize="25dp"
                android:textColor="#000000"
                android:id="@+id/textView3"
                android:layout_below="@+id/nomeEquipe"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="39dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textSize="25dp"
                android:textColor="#000000"
                android:layout_marginTop="50dp"
                android:id="@+id/textView2"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nomeEquipe"
                android:textColor="#000000"
                android:layout_marginTop="45dp"
                android:layout_below="@+id/textView2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinequipe"
                android:layout_below="@+id/textView3"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginTop="79dp">
            </Spinner>

            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/bt"
                android:textColor="#ffffff"
                android:onClick="enviar"
                android:layout_marginTop="560dp"
                android:background="@drawable/bordabotao"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/button" />
        </RelativeLayout>


</ScrollView>
